add timeStamp for console-logs
